@@ -615,6 +615,8 @@
 84) Disable hotplug before update firmware.<br>
 85) Samba2/3 merge the smbd and nmbd binaries. The binary generated is called "smbd", while "nmbd" becomes a symlink(decrease duplicate code).<br>
 86) Fix auth type select in VPN.<br>
+87) More correct reload ppp modules for 16Mb devices (Try fix PPE issue).<br>
+88) No nedd remove ppp modules for 32Mb devices (Try fix PPE issue).<br>
 
 <br>
 <b>1.10.x</b><br>
